# chess

./: .gitignore  CMakeLists.txt  README.md
docs/: algebraic_notation.md  fen_notation.md
src/: chess.hpp
src/board/: board.cpp  board.hpp  board_init.cpp  board_representation.cpp  board_utils.cpp  pawn.cpp  piece.hpp
src/board/pieces/: bishop.cpp  king.cpp  knight.cpp  pawn.cpp  queen.cpp  rook.cpp
test/: board_comparisons.cpp  board_initialization.cpp  board_movement.cpp  board_test.cpp  test.h  test_all.cpp
